2006-04-20  David Reveman  <davidr@novell.com>

	* src/window.c:
	* src/event.c (handleEvent):
	* src/display.c:
	* include/compiz.h:
	* gnome/window-decorator/gnome-window-decorator.c: Add force quit
	dialog.

	* plugins/resize.c: Changed default binding to Button2.

	* src/display.c (LOWER_WINDOW_BUTTON_DEFAULT): Button2 -> 6.

	* gnome/window-decorator/gnome-window-decorator.c:
	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/display.c: Add window menu binding.

	* gnome/window-decorator/gnome-window-decorator.c: Pick up toolkit
	actions from compiz and send gnome panel actions for "main menu" and
	"run dialog" actions.

	* src/event.c (handleEvent):
	* src/screen.c:
	* include/compiz.h:
	* src/display.c (addDisplay): panel action -> toolkit action.

	* src/window.c (getModalTransient): Group transient must not be an
	ancestor to the window we've currently found as the window to focus.
	(getModalTransient): Check for child modal transient.

2006-04-19  David Reveman  <davidr@novell.com>

	* gnome/compiz-window-manager.c: Be nice to gnome-theme-manager
	and return a theme even though we currently don't support it.

	* include/compiz.h:
	* src/main.c: Remove window-image option.

	* include/compiz.h:
	* plugins/water.c:
	* plugins/cube.c:
	* src/texture.c:
	* src/paint.c:
	* src/main.c: Add strict-binding option.

2006-04-18  Dan Winship  <danw@novell.com>

	* src/event.c (handleEvent): Fix a crasher in the screenshot
	binding code (and rename some of the #defines to make them not so
	ridiculously long). Also temporarily hack around a bug in EV_KEY
	by putting the check for WINDOW_SCREENSHOT before the check for
	SCREENSHOT.

	* plugins/scale.c: Change the keybinding again, now to "Pause".
	(F11 is the "fullscreen mode" binding for many apps.)

	* plugins/compiz.schemas: update

	* plugins/gconf.c: 
	* plugins/gconf-compiz-utils.c: 
	* plugins/gconf-dump.c: Rearrange #includes to prevent warning
	about TRUE and FALSE being redefined
